# timeze-gtk

./: .gitignore  AUTHORS  Makefile.am  README.md  configure.ac
src/: Makefile.am  resources.c  resources.h  timeze  timeze.c  timeze.gresources.xml  timeze_add_time_window.c  timeze_add_time_window.h  timeze_app.c  timeze_app.h  timeze_countries.h  timeze_countries_dd_store.c  timeze_countries_dd_store.h  timeze_countries_file.c  timeze_countries_file.h  timeze_countries_loader.c  timeze_countries_loader.h  timeze_main_window.c  timeze_main_window.h  timeze_time_widget.c  timeze_time_widget.h  timeze_utils.c  timeze_utils.h
src/resources/: countries.xml
